[gd_scene load_steps=4 format=3 uid="uid://4tpapswc0bbh"]

[ext_resource type="Script" path="res://shield.gd" id="1_daygc"]
[ext_resource type="Texture2D" uid="uid://cu77sogu42dqr" path="res://sprites/SimpleAsteroidSmall.png" id="1_v1k4e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rd0wc"]

[node name="Shield" type="Area2D" node_paths=PackedStringArray("shield_sprite")]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_daygc")
shield_sprite = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0.764706, 0)
texture = ExtResource("1_v1k4e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rd0wc")

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
